--- a/educode/.gitignore
+++ b/educode/.gitignore
@@ -1,3 +1,7 @@
+# Dependencies
+/node_modules
+
+
 # Misc
 .DS_Store
 .env.local
@@ -5,6 +9,5 @@
 .env.test.local
 .env.production.local
 
-node_modules
 
 dist
