--- a/.github/workflows/ecudodeTest.yml
+++ b/.github/workflows/ecudodeTest.yml
@@ -6,9 +6,11 @@ on:
       - main  # Change this to your default branch
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    
+  build:
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -16,7 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18  # Adjust this to your project's Node.js version
+          node-version: 23  # Adjust this to your project's Node.js version
       
       - name: Install dependencies
         run: 
@@ -25,5 +27,7 @@ jobs:
         run: 
             cd educode && yarn run pretest
 
-      - name: Run Mocha tests
-        run: cd educode && yarn run test
+      - run: cd educode && xvfb-run -a yarn run test
+        if: runner.os == 'Linux'
+      - run: yarn run test
+        if: runner.os != 'Linux'
