need to get current directory

--- a/.github/workflows/serverTest.yml
+++ b/.github/workflows/serverTest.yml
@@ -7,7 +7,16 @@ jobs:
         runs-on: ubuntu-latest
         
         steps:
-        - name: Hello World
-          run: echo "Hello From ${{ github.ref_name }}"
+        - name: Checkout repository
+          uses: actions/checkout@v4
+        - name: Setup Python
+          uses: actions/setup-python@v5
+          with:
+            python-version: '3.13'
+        - name: Setup venv
+          run: | 
+            python -m venv ./.educode \
+            source ./.educode/bin/activate \
+            echo $(pwd)
 
     
