--- a/.github/workflows/serverTest.yml
+++ b/.github/workflows/serverTest.yml
@@ -16,8 +16,8 @@ jobs:
         - name: Setup venv
           run: | 
             pip install --upgrade pip
-            python -m venv ./educode_env \
-            source ./educode_env/bin/activate \
+            python -m venv educode_env \
+            source educode_env/bin/activate \
             echo "PWD: $(pwd) VENV: $VIRTUAL_ENV"
 
     
