--- a/.github/workflows/serverTest.yml
+++ b/.github/workflows/serverTest.yml
@@ -15,9 +15,7 @@ jobs:
             python-version: '3.13'
         - name: Setup venv
           run: | 
-            pip install --upgrade pip
-            python -m venv educode_env \
-            source educode_env/bin/activate \
-            echo "PWD: $(pwd) VENV: $VIRTUAL_ENV"
+            pip install --upgrade pip \
+            echo "PWD: $(pwd)"
 
     
