--- a/.github/workflows/serverTest.yml
+++ b/.github/workflows/serverTest.yml
@@ -16,6 +16,6 @@ jobs:
         - name: Setup venv
           run: | 
             pip install --upgrade pip \
-            echo "PWD: $(pwd)"
+            pwd
 
     
