--- a/.github/workflows/serverTest.yml
+++ b/.github/workflows/serverTest.yml
@@ -15,7 +15,7 @@ jobs:
             python-version: '3.13'
         - name: Setup venv
           run: | 
-            pip install --upgrade pip \
+            pip install --upgrade pip
             pwd
 
     
