--- a/.github/workflows/serverTest.yml
+++ b/.github/workflows/serverTest.yml
@@ -16,6 +16,8 @@ jobs:
         - name: Setup venv
           run: | 
             pip install --upgrade pip
-            pwd
+            python -m venv env
+            source env/bin/activate
+            echo "VIRTUAL ENV:" $VIRTUAL_ENV
 
     
