--- a/educode/package.json
+++ b/educode/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["onStartupFinished"],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -45,6 +47,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "mongodb": "^6.13.1"
   }
