--- a/educode/package.json
+++ b/educode/package.json
@@ -6,16 +6,27 @@
   "engines": {
     "vscode": "^1.88.0"
   },
+  
   "categories": [
     "Other"
   ],
-  "activationEvents": ["onStartupFinished"],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "educode.helloWorld",
-        "title": "Hello World"
+        "command": "educode.askQuestion",
+        "title": "Ask Educode"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "educode.askQuestion",
+        "key": "alt+cmd+u",
+        "when": "editorTextFocus"
+        
       }
     ]
   },
@@ -46,6 +57,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "mongodb": "^6.13.1"
+    "mongodb": "^6.13.1",
+    "prettier": "^3.5.3"
   }
 }
